--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -1,33 +1,108 @@
-.qcon-blivesta{
- 	.qcon-blivesta();
+.qcon-blivesta:before {
+	content:"\e001";
 }
-.qcon-circle-o{
- 	.qcon-circle-o();
+
+
+.qcon-check-square-o:before {
+	content:"\e002";
 }
-.qcon-circle{
- 	.qcon-circle();
+
+
+.qcon-circle-o:before {
+	content:"\e003";
 }
-.qcon-quota{
- 	.qcon-quota();
+
+
+.qcon-circle:before {
+	content:"\e004";
 }
-.qcon-square-c{
- 	.qcon-square-c();
+
+
+.qcon-dribbble:before {
+	content:"\e005";
 }
-.qcon-square-o{
- 	.qcon-square-o();
+
+
+.qcon-envelope:before {
+	content:"\e006";
 }
-.qcon-square-w{
- 	.qcon-square-w();
+
+
+.qcon-github:before {
+	content:"\e007";
 }
-.qcon-square{
- 	.qcon-square();
+
+
+.qcon-gitip:before {
+	content:"\e008";
 }
-.qcon-times-circle-o{
- 	.qcon-times-circle-o();
+
+
+.qcon-hypo-square:before {
+	content:"\e009";
 }
-.qcon-times-circle{
- 	.qcon-times-circle();
+
+
+.qcon-inkan-eno:before {
+	content:"\e00a";
 }
-.qcon-times{
- 	.qcon-times();
+
+
+.qcon-menu:before {
+	content:"\e00b";
+}
+
+
+.qcon-quota:before {
+	content:"\e00c";
+}
+
+
+.qcon-square-o:before {
+	content:"\e00d";
+}
+
+
+.qcon-square-or:before {
+	content:"\e00e";
+}
+
+
+.qcon-square-r:before {
+	content:"\e00f";
+}
+
+
+.qcon-square:before {
+	content:"\e010";
+}
+
+
+.qcon-star:before {
+	content:"\e011";
+}
+
+
+.qcon-target:before {
+	content:"\e012";
+}
+
+
+.qcon-twitter:before {
+	content:"\e013";
+}
+
+
+.qcon-x-circle-o:before {
+	content:"\e014";
+}
+
+
+.qcon-x-circle:before {
+	content:"\e015";
+}
+
+
+.qcon-x:before {
+	content:"\e016";
 }
